@@ -248,7 +248,6 @@ Global
 		{05C0E1FD-697C-47E2-AC1B-3A42601FB121}.Release-4.0|x86.ActiveCfg = Release-4.0|x86
 		{05C0E1FD-697C-47E2-AC1B-3A42601FB121}.Release-4.0|x86.Build.0 = Release-4.0|x86
 		{C4B8FFDB-8A4F-42D3-9A05-A47DCF2E5647}.Debug|x64.ActiveCfg = Debug|x64
-		{C4B8FFDB-8A4F-42D3-9A05-A47DCF2E5647}.Debug|x64.Build.0 = Debug|x64
 		{C4B8FFDB-8A4F-42D3-9A05-A47DCF2E5647}.Debug|x86.ActiveCfg = Debug|x86
 		{C4B8FFDB-8A4F-42D3-9A05-A47DCF2E5647}.Debug|x86.Build.0 = Debug|x86
 		{C4B8FFDB-8A4F-42D3-9A05-A47DCF2E5647}.Debug-4.0|x64.ActiveCfg = Debug-4.0|x64
@@ -515,7 +514,6 @@ Global
 		{26232ADD-2DA4-43CD-BE50-34A319BBFFB8}.Release-4.0|x86.ActiveCfg = Release-4.0|x86
 		{26232ADD-2DA4-43CD-BE50-34A319BBFFB8}.Release-4.0|x86.Build.0 = Release-4.0|x86
 		{C19EF7DF-2F9D-4D4C-965D-AD714DCBB323}.Debug|x64.ActiveCfg = Debug|x64
-		{C19EF7DF-2F9D-4D4C-965D-AD714DCBB323}.Debug|x64.Build.0 = Debug|x64
 		{C19EF7DF-2F9D-4D4C-965D-AD714DCBB323}.Debug|x86.ActiveCfg = Debug|x86
 		{C19EF7DF-2F9D-4D4C-965D-AD714DCBB323}.Debug|x86.Build.0 = Debug|x86
 		{C19EF7DF-2F9D-4D4C-965D-AD714DCBB323}.Debug-4.0|x64.ActiveCfg = Debug-4.0|x64
@@ -581,7 +579,6 @@ Global
 		{DF460EAB-570D-4B50-9089-2E2FC801BF38}.Release-4.0|x86.ActiveCfg = Release-4.0|Win32
 		{DF460EAB-570D-4B50-9089-2E2FC801BF38}.Release-4.0|x86.Build.0 = Release-4.0|Win32
 		{684FC46E-AA77-4F7F-A43B-28E831788CF1}.Debug|x64.ActiveCfg = Debug|x64
-		{684FC46E-AA77-4F7F-A43B-28E831788CF1}.Debug|x64.Build.0 = Debug|x64
 		{684FC46E-AA77-4F7F-A43B-28E831788CF1}.Debug|x86.ActiveCfg = Debug|x86
 		{684FC46E-AA77-4F7F-A43B-28E831788CF1}.Debug|x86.Build.0 = Debug|x86
 		{684FC46E-AA77-4F7F-A43B-28E831788CF1}.Debug-4.0|x64.ActiveCfg = Debug-4.0|x64
